--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-intersection-observer": "^10.0.3",
     "react-router-dom": "^7.13.1",
     "react-use": "^17.6.0",
